force-app/main/default/objects/Maintained_Fees__c/Maintained_Fees__c.object-meta.xml
<CustomObject>
    <description>These fees are selected by the REPs from options provided by the CNP admins</description>
    <label>TDSP-Maintained Fee</label>
    <nameField>
        <displayFormat>TDU Fee-{0}</displayFormat>
        <label>Maintained Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDSP-Maintained Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>