force-app/main/default/objects/Maintained_Fees__c/fields/Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this fee in addition to the base energy charge AND any other fees listed?</description>
    <inlineHelpText>Is this fee in addition to the base energy charge AND any other fees listed?</inlineHelpText>
    <label>Additional Charge?</label>
    <type>Checkbox</type>
</CustomField>