force-app/main/default/objects/Maintained_Fees__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <formula>TEXT( Fee__r.Basis__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How the fee is charged.  This is set by the CNP admin and can&#39;t be edited by REPs</inlineHelpText>
    <label>Basis</label>
    <type>Text</type>
</CustomField>