force-app/main/default/objects/Maintained_Fees__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which of the CNP admin-maintained fees do you want to include?</description>
    <inlineHelpText>Which of the CNP admin-maintained fees do you want to include?</inlineHelpText>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipName>Maintained_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>