force-app/main/default/objects/Maintained_Fees__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>The parent  rate that has this fee</description>
    <inlineHelpText>The parent  rate that has this fee</inlineHelpText>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipName>Maintained_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>