force-app/main/default/objects/Maintained_Fees__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>Fee__r.Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This fee is maintained by the TrueCost admins.  You can&#39;t edit it.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>